--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,6 +1,7 @@
 .Header {
-  width: 100vw;
-  height: 88px;
+  min-width: 320px;
+  width: 100%;
+  min-height: 88px;
   background: #f8f9fa;
   box-shadow: 0px 4px 32px -12px rgba(0, 0, 0, 0.25);
   display: flex;
@@ -11,7 +12,7 @@
 }
 
 .container {
-  width: 60%;
+  width: 90%;
   display: flex;
   height: 100%;
   justify-content: space-between;
@@ -31,4 +32,10 @@
   border-radius: 8px;
   color: var(--color-Grey-4);
   cursor: pointer;
+}
+
+@media (min-width: 900px) {
+  .container {
+    width: 60%;
+  }
 }
