--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap");
+
 :root {
   font-family: "Nunito", sans-serif;
   font-size: 16px;
@@ -11,7 +12,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  box-sizing: border-box;
+  
 
   list-style: none;
 
@@ -44,8 +45,8 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 button {
@@ -58,10 +59,12 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--color-Grey-4);
 }
 
 *{
   list-style: none;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
